# Hamburg-Haskell-Meetup-23-May-18

./: .gitignore  Dist.hs  Free.hs  Monad.hs  Program.hs  README.md  default.nix  hh-haskell-meetup-free-monads.cabal
idris/: Dist.idr  Free.idr  Mon.idr  Program.idr
