name: hh-haskell-meetup-free-monads
version: 1.0.0
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules:
                  Program
                , Monad
                , Free
  build-depends:
                  base
  default-language: Haskell2010
  ghc-options:
                -Wall
