name: hh-haskell-meetup-free-monads
version: 1.0.0
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules:
                  Dist
  other-modules:
                  Program
                , Monad
                , Free
  build-depends:
                  base
                , containers
                , QuickCheck
  default-language: Haskell2010
  ghc-options:
                -Wall
